added protocols to platforms
