# routes/prod/api-docs-v2.json
@@ -758,6 +758,12 @@
                           "logo": {
                             "type": "string"
                           },
+                          "protocols": {
+                            "type": "array",
+                            "items": {
+                              "type": "string"
+                            }
+                          },
                           "type": {
                             "type": "string"
                           },
@@ -783,6 +789,12 @@
                           },
                           "logo": {
                             "type": "string"
+                          },
+                          "protocols": {
+                            "type": "array",
+                            "items": {
+                              "type": "string"
+                            }
                           },
                           "type": {
                             "type": "string"
